force-app/main/default/objects/FS_Flavor_Change_New__c/FS_Flavor_Change_New__c.object-meta.xml
<CustomObject>
    <description>desc</description>
    <label>Flavor Change Line</label>
    <nameField>
        <displayFormat>FCN-{0000}</displayFormat>
        <label>Flavor Change Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flavor Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>