force-app/main/default/objects/FS_Flavor_Change_New__c/fields/Current_Non_Branded_Water__c.field-meta.xml
<CustomField>
    <fullName>Current_Non_Branded_Water__c</fullName>
    <description>Current Non Branded Water text</description>
    <label>Current Non-Branded Water</label>
    <length>30</length>
    <type>Text</type>
</CustomField>