force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_BS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_BS_Effective_Date__c</fullName>
    <label>Brandset Effective Date</label>
    <type>Date</type>
</CustomField>