force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Current_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Brandset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Brandset</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Flavor Changes (Current Brandset)</relationshipLabel>
    <relationshipName>Flavor_Changes_New1_del1</relationshipName>
    <type>Lookup</type>
</CustomField>