force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Current_Brandset_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Brandset_Name_txt__c</fullName>
    <label>Current Brandset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>