force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Current_Water__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Water__c</fullName>
    <description>This field holds the current water attrib</description>
    <formula>TEXT(FS_Outlet_Dispenser__r.FS_Water_Button__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Non-Branded Water</label>
    <type>Text</type>
</CustomField>