force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_DA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_DA_Effective_Date__c</fullName>
    <label>Hide/Show Dasani Effective Date</label>
    <type>Date</type>
</CustomField>