force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_DataUsedInCode__c.field-meta.xml
<CustomField>
    <fullName>FS_DataUsedInCode__c</fullName>
    <description>This field is referenced in code for some processing</description>
    <label>DataUsedInCode</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>