force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Entity_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_Hierarchy__c</fullName>
    <formula>FS_Entity_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>