force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Flavor_Changes_New</relationshipName>
    <type>Lookup</type>
</CustomField>