force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_FC_Head__c.field-meta.xml
<CustomField>
    <fullName>FS_FC_Head__c</fullName>
    <label>Flavor Change Header</label>
    <referenceTo>FS_Flavor_Change_Head__c</referenceTo>
    <relationshipName>Flavor_Changes_New</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>