force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Approval</label>
    <type>Checkbox</type>
</CustomField>