force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Flavor_Change_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Requested_Date__c</fullName>
    <label>Flavor change Requested Date</label>
    <type>Date</type>
</CustomField>