force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Flavor_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Type__c</fullName>
    <formula>Text(FS_FC_Head__r.FS_FC_Type__c)</formula>
    <label>Flavor Change Type</label>
    <type>Text</type>
</CustomField>