force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Hide_Show_Dasani__c.field-meta.xml
<CustomField>
    <fullName>FS_Hide_Show_Dasani__c</fullName>
    <label>Hide/Show Dasani</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>