force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipName>Flavor_Changes_New</relationshipName>
    <type>Lookup</type>
</CustomField>