force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_New_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Brandset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Brandset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>contains</operation>
            <valueField>$Source.FS_Platform__c</valueField>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Flavor Changes (New Brandset)</relationshipLabel>
    <relationshipName>Flavor_Changes_New3_del1</relationshipName>
    <type>Lookup</type>
</CustomField>