force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_New_Brandset_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Brandset_Number__c</fullName>
    <formula>FS_New_Brandset__r.FS_Brandset_Number__c</formula>
    <label>New Brandset Number</label>
    <type>Text</type>
</CustomField>