force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Only_Water_Dasani__c.field-meta.xml
<CustomField>
    <fullName>FS_Only_Water_Dasani__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Water/Dasani</label>
    <type>Checkbox</type>
</CustomField>