force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invalid outlet linked to this flavor change</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Outlet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Flavor_Changes_New1</relationshipName>
    <type>Lookup</type>
</CustomField>