force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Outlet_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_ACN__c</fullName>
    <formula>FS_Outlet__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet ACN</label>
    <type>Text</type>
</CustomField>