force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Dispenser</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>please select only 7000,8000,9000 Outlet Dispenser</errorMessage>
        <filterItems>
            <field>FS_Outlet_Dispenser__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>7000, 8000, 9000, CCNA Dispenser</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Flavor Changes</relationshipLabel>
    <relationshipName>Flavor_Changes_New</relationshipName>
    <type>Lookup</type>
</CustomField>