force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_Platform__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>