force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_SP_go_out__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_go_out__c</fullName>
    <label>Does SP need to go out?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>