force-app/main/default/objects/FS_Flavor_Change_New__c/fields/FS_WA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_WA_Effective_Date__c</fullName>
    <label>Non-Branded Water Effective Date</label>
    <type>Date</type>
</CustomField>