force-app/main/default/objects/FS_Flavor_Change_New__c/fields/Hiidden_Today__c.field-meta.xml
<CustomField>
    <fullName>Hiidden_Today__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Hiidden Today</label>
    <type>Date</type>
</CustomField>