force-app/main/default/objects/FS_Flavor_Change_New__c/fields/Today_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Today Date</label>
    <type>Date</type>
</CustomField>