force-app/main/default/objects/FS_Flavor_Change_New__c/recordTypes/FS_Flavor_Change_Outlet.recordType-meta.xml
<RecordType>
    <fullName>FS_Flavor_Change_Outlet</fullName>
    <active>true</active>
    <label>FS Flavor Change Outlet</label>
</RecordType>