force-app/main/default/objects/FS_Flavor_Change_New__c/recordTypes/FS_Flavor_Change_Outlet_Dispenser.recordType-meta.xml
<RecordType>
    <fullName>FS_Flavor_Change_Outlet_Dispenser</fullName>
    <active>true</active>
    <label>FS Flavor Change Outlet Dispenser</label>
</RecordType>